# Hey

./: .gitignore  README.md  README.zh-CN.md  THIRD-PARTY-NOTICES.md  code-linter.json5  oh-package.json5
AppScope/: app.json5
docs/: bug-plan.md  building-native-cores.md  development-plan.md  harmonyos-go-tls-wall.md  ipv6-leak-prevention.md  real-device-test-plan.md  real-device-vpn-test.md  roadmap.md  ui-redesign.md  v2rayng-feature-map.md
docs/v2rayng-analysis/: 03-config-subscription-routing-settings.md  04-ui-and-features.md  README.md
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  README.md  README.zh-CN.md  napi_init.cpp
entry/src/main/cpp/prebuilt/arm64-v8a/: libheytun2socks.h  libxray.h
entry/src/main/cpp/tun2socks_adapter/: go.mod  go.sum  main.go
entry/src/main/cpp/types/libheyvpn/: Index.d.ts
entry/src/main/ets/controlcardability/: ControlCardAbility.ets
entry/src/main/ets/core/: AdvancedOutboundBuilder.ets  AppBackup.ets  AssetUrls.ets  ControlCard.ets  CoreInfo.ets  DeepLink.ets  Encoding.ets  GeoAssets.ets  H2Transport.ets  HevTunConfig.ets  I18n.ets  IdnUrl.ets  LocalProxy.ets  ManualOutboundBuilder.ets  NodeDedupe.ets  PerAppProxy.ets  PrivateNetwork.ets  Profile.ets  RoutingRules.ets  RuntimeReconnect.ets  ShareLinkParser.ets  (+7 more)
entry/src/test/: LocalUnit.test.ets
libsingbox/: README.md  validate_test.go
openspec/changes/split-index-by-feature/: design.md  proposal.md  tasks.md
scripts/: build_hev_ohos.sh  build_libsingbox_ohos.sh  build_libxray_ohos.sh  build_tun2socks_ohos.sh  device_vpn_smoke_test.sh
(+66 files in other folders)
